Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59922

WebEngine rendering lots of text is very slow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.0 RC
    • 5.8.0, 5.9.0 Alpha
    • WebEngine
    • None
    • Linux Mint 18.1
    • 7f28424f864523f2b3ea2152d4686683bb03bd88

      When I open the attached file (which just contains 65536 lines with 64 "a"s each) in Demo Browser, Minimal Browser, Simple Browser, ... and scroll down, the rendering becomes very slow. It manages to render about 240 lines, then it takes seconds to catch up, so I can scroll down another 100 lines etc.

      It works much better in chromium-browser, chrome and firefox. I have tried passing my chrome://flags settings via commandline switches to webengine.

      This happens on http://, file:// and custom url schemes.

        For Gerrit Dashboard: QTBUG-59922
        # Subject Branch Project Status CR V

            alexandru.croitor Alexandru Croitor
            viengelm Viktor Engelmann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes