Disable accessibility support on Linux by default

For very big HTML pages, accessibility support can slow down the
loading and rendering of pages due to creation of many AXNodes
for every DOM node, and a lot of serializing and deserializing
between processes. Because accessibility is almost always enabled
on Linux, and there is no way to query if an accessibility feature
was explicitly requested, Qt WebEngine accessibility support on
Linux will be disabled by default.

Users can set the QTWEBENGINE_ENABLE_LINUX_ACCESSIBILITY
environment variable to re-enable accessibility support on Linux.

[ChangeLog][Accessibility][Linux] Accessibility is disabled
by default for Qt WebEngine on Linux.

Task-number: QTBUG-59922
Task-number: QTBUG-54650
Change-Id: Ib0454f6f753043838e4ecf2227d2249afc15a6ef
Reviewed-by: Kai Koehne <kai.koehne@qt.io>